--- a/projects/personal-fdu.html
+++ b/projects/personal-fdu.html
@@ -346,12 +346,15 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FILLERTITLE</h1>
+            <h1 class="project-title">Fingerprint Door Unlocker</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">FILLERSKILLS</span>
-                    <span class="skill-tag">FILLERSKILLS</span>
+                    <span class="skill-tag">Arduino</span>
+                    <span class="skill-tag">3D Printing</span>
+                    <span class="skill-tag">CAD Design</span>
+                    <span class="skill-tag">Mechatronics</span>
+                    <span class="skill-tag">Embedded Systems</span>
                 </div>
             </div>
         </header>
@@ -359,17 +362,22 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>Living in a dorm means carrying a key card everywhere, which can be inconvenient and time-consuming when trying to enter your room. The traditional key card system requires fumbling through pockets or bags, potentially dropping items, and swiping multiple times if the reader doesn't work on the first try. I wanted to create a more efficient and user-friendly way to unlock my dorm door that would eliminate the need for physical credentials while maintaining security.</p>
+                
+                <img src="/api/placeholder/800/400" alt="Fingerprint Door Unlocker mounted on door" />
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>I designed and developed a complete door unlocking system that uses fingerprint authentication for secure and convenient access. The project combined hardware design, 3D printing, and Arduino programming to create a practical solution.</p>
                 <ul>
-                    <li>FILLERWORK</li>
-                    <li>FILLERWORK</li>
+                    <li>Designed a compact housing that could be mounted on the door without permanent modifications</li>
+                    <li>Implemented a lead screw mechanism for smooth, reliable linear motion to actuate the door handle</li>
+                    <li>Created and 3D printed all structural components to ensure perfect fit with the existing door hardware</li>
+                    <li>Programmed an Arduino to interface with the fingerprint sensor and control the motion system</li>
+                    <li>Developed a power-efficient system that could operate on battery power for extended periods</li>
                 </ul>
             </div>
         </section>
@@ -377,10 +385,13 @@
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>The fingerprint door unlocker proved to be a significant improvement over the traditional key card system, providing both convenience and efficiency gains.</p>
                 <ul>
-                    <li>FILLERRESULTS</li>
-                    <li>FILLERRESULTS</li>
+                    <li>Reduced time required to enter dorm by 50% compared to using a key card</li>
+                    <li>Successfully eliminated the need to carry and manage physical credentials</li>
+                    <li>Created a secure system that only responds to registered fingerprints</li>
+                    <li>Designed a non-permanent installation that doesn't damage door hardware</li>
+                    <li>Implemented a fail-safe mechanism that allows for manual operation if needed</li>
                 </ul>
             </div>
         </section>
@@ -388,10 +399,13 @@
         <section id="lessons" class="content-section">
             <h2 class="section-title">Lessons Learned</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>This project provided valuable experience in combining mechanical design with electronics and programming to create a practical solution to an everyday problem.</p>
                 <ul>
-                    <li>FILLERLESSON</li>
-                    <li>FILLERLESSON</li>
+                    <li>Learned the importance of designing for reliability in daily-use mechanical systems</li>
+                    <li>Gained experience in optimizing 3D printed parts for strength and durability</li>
+                    <li>Developed skills in integrating biometric sensors with mechanical actuators</li>
+                    <li>Understood the challenges of creating user-friendly security systems</li>
+                    <li>Improved ability to iterate on designs based on real-world testing and feedback</li>
                 </ul>
             </div>
         </section>
