--- a/projects/personal-lr.html
+++ b/projects/personal-lr.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FILLER | Terry Yu</title>
+    <title>Linear Rails | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -346,12 +346,16 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FILLERTITLE</h1>
+            <h1 class="project-title">3D Printable Recirculating Ball Linear Rails</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">FILLERSKILLS</span>
-                    <span class="skill-tag">FILLERSKILLS</span>
+                    <span class="skill-tag">3D Design</span>
+                    <span class="skill-tag">FDM Printing</span>
+                    <span class="skill-tag">Mechanical Design</span>
+                    <span class="skill-tag">Tolerance Analysis</span>
+                    <span class="skill-tag">Bearing Design</span>
+                    <span class="skill-tag">Design for Manufacturing</span>
                 </div>
             </div>
         </header>
@@ -359,17 +363,23 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>Traditional linear rails, while precise and robust, are often expensive and require specialized manufacturing processes. This makes them inaccessible for many hobbyist projects and rapid prototyping applications. Commercial linear rails also come in fixed sizes and preload settings, limiting their adaptability to specific project needs. The challenge was to create a fully 3D printable linear rail system that could match the smooth operation and precision of commercial rails while being cost-effective and customizable.</p>
+                
+                <img src="/api/placeholder/800/400" alt="3D printed linear rail assembly showing recirculating ball mechanism" />
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>I developed a complete linear rail system that could be manufactured primarily through 3D printing, with only the bearing balls needing to be purchased. The design incorporates several innovative features to achieve smooth, precise motion while maintaining adjustability.</p>
                 <ul>
-                    <li>FILLERWORK</li>
-                    <li>FILLERWORK</li>
+                    <li>Designed a recirculating ball bearing system that allows for continuous linear motion with minimal friction</li>
+                    <li>Created an adjustable preload mechanism that can be tuned after assembly to optimize between smoothness and rigidity</li>
+                    <li>Engineered precise ball return pathways to ensure smooth transition of bearing balls between loaded and return channels</li>
+                    <li>Developed a modular design that allows for easy customization of rail length and bearing block size</li>
+                    <li>Optimized the design for FDM 3D printing, considering layer adhesion strength and print orientation</li>
+                    <li>Implemented features to allow for easy assembly and maintenance, including access points for ball insertion and removal</li>
                 </ul>
             </div>
         </section>
@@ -377,10 +387,14 @@
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>The 3D printed linear rail system successfully achieved its goals of creating an accessible, customizable alternative to commercial linear rails.</p>
                 <ul>
-                    <li>FILLERRESULTS</li>
-                    <li>FILLERRESULTS</li>
+                    <li>Successfully created fully functional recirculating ball linear rails using primarily 3D printed components</li>
+                    <li>Achieved smooth, low-friction motion comparable to entry-level commercial linear rails</li>
+                    <li>Significantly reduced cost compared to commercial alternatives while maintaining functionality</li>
+                    <li>Created a design that can be easily modified for different applications and size requirements</li>
+                    <li>Implemented adjustable preload that allows for fine-tuning of bearing performance</li>
+                    <li>Developed a system that can be manufactured using consumer-grade 3D printers</li>
                 </ul>
             </div>
         </section>
@@ -388,10 +402,14 @@
         <section id="lessons" class="content-section">
             <h2 class="section-title">Lessons Learned</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>This project provided invaluable experience in precision mechanical design and the limitations and capabilities of 3D printing for functional components.</p>
                 <ul>
-                    <li>FILLERLESSON</li>
-                    <li>FILLERLESSON</li>
+                    <li>Gained deep understanding of bearing design principles and the importance of precise tolerance control</li>
+                    <li>Learned techniques for optimizing 3D printed parts for strength and dimensional accuracy</li>
+                    <li>Developed skills in designing adjustable mechanical systems that can be tuned after assembly</li>
+                    <li>Discovered methods for creating smooth ball return pathways that minimize friction and noise</li>
+                    <li>Understood the importance of considering assembly and maintenance requirements during the design phase</li>
+                    <li>Learned to balance theoretical design ideals with practical manufacturing constraints</li>
                 </ul>
             </div>
         </section>
