--- a/projects/personal-pw.html
+++ b/projects/personal-pw.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FILLER | Terry Yu</title>
+    <title>Portfolio Website | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -346,12 +346,15 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FILLERTITLE</h1>
+            <h1 class="project-title">Personal Portfolio Website</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">FILLERSKILLS</span>
-                    <span class="skill-tag">FILLERSKILLS</span>
+                    <span class="skill-tag">HTML</span>
+                    <span class="skill-tag">CSS</span>
+                    <span class="skill-tag">JavaScript</span>
+                    <span class="skill-tag">UI Design</span>
+                    <span class="skill-tag">Responsive Design</span>
                 </div>
             </div>
         </header>
@@ -359,17 +362,20 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>I needed to create a professional portfolio website to showcase my engineering projects and technical work. The site needed to be clean, responsive, and user-friendly while incorporating modern web design features and maintaining fast load times. The design needed to effectively organize and present multiple complex technical projects in an accessible way.</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>Developed the complete website from scratch:</p>
                 <ul>
-                    <li>FILLERWORK</li>
-                    <li>FILLERWORK</li>
+                    <li>Designed and implemented a responsive layout using pure CSS, ensuring optimal viewing across all device sizes</li>
+                    <li>Created an intuitive dark mode toggle with smooth transitions and persistent state</li>
+                    <li>Developed a project filtering system to help visitors easily find relevant content</li>
+                    <li>Implemented smooth scrolling navigation and fixed positioning elements for improved user experience</li>
+                    <li>Engineered a modular structure allowing for easy addition of new projects and content</li>
                 </ul>
             </div>
         </section>
@@ -377,10 +383,13 @@
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>The website achieved several key features:</p>
                 <ul>
-                    <li>FILLERRESULTS</li>
-                    <li>FILLERRESULTS</li>
+                    <li>Clean, minimalist design with consistent typography and spacing</li>
+                    <li>Seamless dark/light mode switching with smooth transitions</li>
+                    <li>Responsive layout that adapts to mobile, tablet, and desktop views</li>
+                    <li>Interactive project filtering system for easy content navigation</li>
+                    <li>Fast load times through optimized CSS and JavaScript</li>
                 </ul>
             </div>
         </section>
@@ -388,10 +397,13 @@
         <section id="lessons" class="content-section">
             <h2 class="section-title">Lessons Learned</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>This project provided valuable insights into:</p>
                 <ul>
-                    <li>FILLERLESSON</li>
-                    <li>FILLERLESSON</li>
+                    <li>Modern web development best practices and standards</li>
+                    <li>Importance of user experience in interface design</li>
+                    <li>CSS organization and maintainability strategies</li>
+                    <li>JavaScript event handling and DOM manipulation</li>
+                    <li>Responsive design principles and implementation</li>
                 </ul>
             </div>
         </section>
