--- a/projects/personal-fdu.html
+++ b/projects/personal-fdu.html
@@ -63,6 +63,7 @@
         body.dark-mode .back-button {
             border-color: var(--text-color-dark);
             color: var(--text-color-dark);
+            background-color: var(--bg-color-dark);
         }
 
         .back-button:hover {
@@ -251,11 +252,27 @@
             position: absolute;
             bottom: 20px;
             cursor: pointer;
-            background: none;
+            background-color: var(--bg-color-light);
+            color: var(--text-color-light);
+            font-size: 16px;
             border: 1px solid var(--line-color-light);
             padding: 8px 12px;
             border-radius: 5px;
-            font-size: 16px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .theme-toggle.hover {
+            transform: rotate(10deg);
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .theme-toggle.clicked {
+            transform: scale(1.3);
+        }
+
+        .theme-toggle.dark-mode {
+            background-color: var(--bg-color-dark);
+            color: var(--text-color-dark);
         }
 
         @media screen and (max-width: 768px) {
@@ -308,6 +325,7 @@
 
             .theme-toggle {
                 right: 20px;
+                vertical-align: middle;
                 bottom: auto;
             }
         }
@@ -412,22 +430,42 @@
     </main>
 
     <script>
-        const toggleButton = document.getElementById('theme-toggle');
+      const toggleButton = document.getElementById('theme-toggle');
         const body = document.body;
-        
+        let cantoggle = true;
+
         toggleButton.addEventListener('click', () => {
-            body.classList.toggle('dark-mode');
-            toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+            toggleButton.classList.add('clicked');
+            setTimeout(() => {
+                toggleButton.classList.remove('clicked');
+            }, 100);
+            setTimeout(() => {
+                toggleButton.classList.remove('hover');
+            }, 160);
+
+            cantoggle = false;
         });
 
-        document.querySelectorAll('.toc-list a').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                document.querySelector(targetId).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
+        toggleButton.addEventListener('mouseover', () => {
+            toggleButton.classList.add('hover');
+
+            if(cantoggle) {
+                body.classList.toggle('dark-mode');
+                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+            }
+        });
+
+        toggleButton.addEventListener('mouseout', () => {    
+            if(cantoggle) {
+                body.classList.toggle('dark-mode');
+                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+            }
+
+            setTimeout(() => {
+                toggleButton.classList.remove('hover');
+            }, 100);
+
+            cantoggle = true;
         });
     </script>
 </body>
