--- a/projects/index.html
+++ b/projects/index.html
@@ -491,11 +491,11 @@
             <h2>Extracurricular Clubs</h2>
             <div class="projects-grid">
                 <a href="clubs-mk10s&c.html" class="project-link">
-                    <div class="project-card" style="background-image: url('/images/projects.jpeg')">
+                    <div class="project-card" style="background-image: url('/projects/images/mk10s&c/mk10s&c-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Mk 10 Sprocket and Chain</h2>
                         <p class="project-aff">Formula SAE</p>
-                        <p class="project-description">Designed and optimized sprocket and chain assembly.</p>
+                        <p class="project-description">Designed and optimized sprockets, chain, and transmission shaft.</p>
                         <span class="resume-star">★</span>
                         <div class="tags-container"></div>
                     </div>
@@ -570,14 +570,15 @@
                     </div>
                 </a>
                 <a href="personal-pw.html" class="project-link">
-                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                    <div class="project-card" style="background-image: url('/projects/images/pw/pw-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Portfolio Website</h2>
                         <p class="project-description">Responsive portfolio website built with HTML, CSS, and JavaScript to showcase engineering projects.</p>
                         <div class="tags-container"></div>
                     </div>
                 </a>
-                <a href="personal-lr.html" class="project-link">
+                <!-- <a href="personal-lr.html" class="project-link"> -->
+                <a href="inprogress.html" class="project-link">
                     <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Linear Rails</h2>
