--- a/projects/personal-misc.html
+++ b/projects/personal-misc.html
@@ -453,7 +453,7 @@
                     <p class="project-description">One day, I decided to code the Pong Game just for fun, because I couldn't find a website to play it on with my friend.</p>
                     <div class="project-skills">
                         <span class="skill-tag">Java</span>
-                        <span class="skill-tag">GUI</span>
+                        <span class="skill-tag">Game Dev</span>
                     </div>
                 </div>
             </div>
@@ -470,10 +470,10 @@
                         </a>
                     </div>
                     <div class="project-date">2020</div>
-                    <p class="project-description">Coded the Snake Game, with a fun twist.</p>
+                    <p class="project-description">Coded the Snake Game using Java Swing, with 3 difficulty levels, a game over/high score page, and a fun twist.</p>
                     <div class="project-skills">
-                        <span class="skill-tag">Java</span>
-                        <span class="skill-tag">GUI</span>
+                        <span class="skill-tag">Java</span> 
+                        <span class="skill-tag">Game Dev</span>
                     </div>
                 </div>
             </div>
